# DPLL-SAT-Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md
libs/helper/: CMakeLists.txt  LinkedList.c  LinkedList_private.h  StringBuilder.c  StringBuilder_private.h
libs/helper/include/: LinkedList.h  StringBuilder.h
src/: CMakeLists.txt  CNFParsers.vala  Clause.c  Clause.h  Clause.vala  Constants.c  Constants.h  Constants.vala  Formula.c  Formula.h  Formula.vala  FormulaContext.vala  GenericLiteral.c  LinkedList.c  LinkedList.h  LinkedList_private.h  Literal.c  Literal.h  Literal.vala  LiteralAssignmentArray.c  LiteralOccurrenceTuple.vala  Main.c  Main.h  Main.vala  Parser-CNF.c  Parser-CNF.h  Parser-CNF.vala  Parser-DIMACS.c  Parser-DIMACS.h  Parser-DIMACS.vala  Parser-Dimacs.vala  PartialAssignment.vala  StringBuilder.c  StringBuilder.h  Tests.vala
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  test_sat.sh
tests/helper/: .gitignore  assignment_to_dimacs.py  dpll.py  evaluation.py  parsing.py  solution_checker.py
tests/memory/: CMakeLists.txt  test.sh
tests/resources/sat/basic/: basic-01.cnf  basic-02.cnf  basic-03.cnf  basic-04.cnf
tests/resources/sat/supereasy/: supereasy-3sat-0001.cnf  supereasy-3sat-0002.cnf  supereasy-3sat-0003.cnf  supereasy-3sat-0004.cnf  supereasy-3sat-0005.cnf  supereasy-3sat-0006.cnf  supereasy-3sat-0007.cnf  supereasy-3sat-0008.cnf  supereasy-3sat-0009.cnf  supereasy-3sat-0010.cnf  supereasy-3sat-0011.cnf  supereasy-3sat-0012.cnf  supereasy-3sat-0013.cnf  supereasy-3sat-0014.cnf  supereasy-3sat-0015.cnf
tests/resources/unsat/basic/: basic-01.cnf
